Update routes and Collapse styles Correction de la redirection en cas d'erreur sur l'ID d'un logement

--- a/src/components/Collapse/styles.scss
+++ b/src/components/Collapse/styles.scss
@@ -4,6 +4,7 @@ $border-radius: 5px;
   width: 100%;
   border-radius: $border-radius;
   background-color: var(--color-grey1, #f6f6f6);
+  justify-self: center;
 
   &__title {
     --collapse-font-size: 24px;
